Changing in index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Hello World from daniyal Good morning.......</h1>
+    <h1> Hello World from daniyal Good morning.......
+        so im directly deploy on the website
+    </h1>
 </body>
 </html>
